<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mbm.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.mbm.myapplication.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.mbm.myapplication.ui.Profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_Teacher"
        android:name="com.mbm.myapplication.ui.Teacher.teacherFragment"
        android:label="@string/menu_Teacher"
        tools:layout="@layout/fragment_teacher" />

    <fragment
        android:id="@+id/nav_Students"
        android:name="com.mbm.myapplication.ui.Students.StudentsFragment"
        android:label="@string/menu_Students"
        tools:layout="@layout/fragment_student" />


    <fragment
        android:id="@+id/nav_classes"
        android:name="com.mbm.myapplication.ui.classes.ClassesFragment"
        android:label="@string/menu_Classes"
        tools:layout="@layout/fragment_classes" />
    <fragment
        android:id="@+id/nav_exam_deshboard"
        android:name="com.mbm.myapplication.ui.Exam.ExamdeshboardFragment"
        android:label="@string/menu_Exam"
        tools:layout="@layout/fragment_examdeshboard" />

    <fragment
        android:id="@+id/nav_exam_holiday"
        android:name="com.mbm.myapplication.ui.Holidays.HolidaysFragment"
        android:label="@string/menu_Holiday"
        tools:layout="@layout/fragment_holidays" />
    <fragment
        android:id="@+id/nav_events"
        android:name="com.mbm.myapplication.ui.Events.EventsFragment"
        android:label="@string/menu_Events"
        tools:layout="@layout/fragment_events" />
    <fragment
        android:id="@+id/nav_exam_syllabus"
        android:name="com.mbm.myapplication.ui.Syllabus.SyllabusFragment"
        android:label="@string/menu_Syllabus"
        tools:layout="@layout/fragment_syllabus" />
    <fragment
        android:id="@+id/nav_scholership"
        android:name="com.mbm.myapplication.ui.Scholarshipdeshboard.ScholarshipFragment"
        android:label="@string/menu_Scholership"
        tools:layout="@layout/fragment_scholarship" />
    <fragment
        android:id="@+id/nav_exam_contect_with"
        android:name="com.mbm.myapplication.ui.Contect_with.ContectFragment"
        android:label="@string/menu_contect_with"
        tools:layout="@layout/fragment_contect_with" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.mbm.myapplication.ui.Settings.SettingFragment"
        android:label="@string/menu_Setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/nav_terms"
        android:name="com.mbm.myapplication.ui.Terms.TermsFragment"
        android:label="@string/menu_term"
        tools:layout="@layout/fragment_terms" />
    <fragment
        android:id="@+id/nav_privacy_policy"
        android:name="com.mbm.myapplication.ui.Privacy_policy.Privacy_policyFragment"
        android:label="@string/menu_privacy_policy"
        tools:layout="@layout/fragment_privacy_policy" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.mbm.myapplication.ui.Help_center.Help_centerFragment"
        android:label="@string/menu_Help_center"
        tools:layout="@layout/fragment_help_center" />

</navigation>